--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <input type="text" onClick="addQuestion()" value="Soumettre"/>
     </header>
 
-    <div class="titre">TITRE</div>
+    <div class="titre">SIDAAA</div>
     <img class="fit-picture" src="" alt="">  
     <input type="button" value="OUI">
     <input type="button" value="NON">
