gooeee a le sida lui dites svp

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="titre">SIDAAA</div>
-    <img class="fit-picture" src="" alt="">  
+    <img class="fit-picture" src="source/goe.jpg" alt="">
     <input type="button" value="OUI">
     <input type="button" value="NON">
 </body>
