je tenter des trucs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
     <header>
-      <input type="text" onClick="addQuestion()" value="Soumettre"/>
+      <input type="text" value="Soumettre" id="eg"/>
     </header>
 
     <nav>
