j'en peux plus de la grosse tete de goe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Voici notre en‑tête principale utilisée dans toutes les pages
           de notre site web -->
     <header>
-      <input type="text" value="Soumettre" id="eg"/>
+      <input type="text" value="Soumettre" class="eg"/>
     </header>
 
     <div class="titre">SIDAAA</div>
