--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <div class="titre">SIDAAA</div>
     <img class="fit-picture" src="source/goe.jpg" alt="">
-    <input class="yes-button" type="button" value="OUI">
-    <input class="no-button" type="button" value="NON">
+    <input class="button yes-button" type="button" value="OUI">
+    <input class="button no-button" type="button" value="NON">
 </body>
 </html>
 
