--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
       <input type="text" value="Soumettre" class="eg"/>
     </header>
 
-    <div class="titre">SIDAAA</div>
-    <img class="fit-picture" src="source/goe.jpg" alt="">
-    <input class="button yes-button" type="button" value="OUI">
-    <input class="button no-button" type="button" value="NON">
+    <div class="main-container">
+        <div class="titre">SIDAAA</div>
+        <img class="fit-picture" src="source/goe.jpg" alt="">
+
+        <div class="button-container">
+            <input class="button yes-button" type="button" value="OUI">
+            <input class="button no-button" type="button" value="NON">
+        </div>
+    </div>
 </body>
 </html>
 
