--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <img class="fit-picture" src="source/goe.jpg" alt="">
 
         <div class="button-container">
-            <input class="button yes-button" type="button" value="OUI">
-            <input class="button no-button" type="button" value="NON">
+            <input id="yesButton" class="button yes-button" type="button" value="OUI">
+            <input id="noButton" class="button no-button" type="button" value="NON">
         </div>
     </div>
 </body>
