EUUUUH LEO LE BIHAN, EST CE QUE JE PEUX PEUUUUSHH

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="fit-picture" src="source/goe.jpg" alt="">
 
         <div class="button-container">
-            <input id="yesButton" class="button yes-button" type="button" value="OUI">
+            <input id="yesButton" class="button yes-button" type="button" value="OUI 😂">
             <input id="noButton" class="button no-button" type="button" value="NON">
         </div>
     </div>
