--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="button-container">
             <input id="yesButton" class="button yes-button" type="button" value="OUI 😂">
-            <input id="noButton" class="button no-button" type="button" value="NON">
+            <input id="noButton" class="button no-button" type="button" value="NON 😐">
         </div>
     </div>
 </body>
