--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="main-container">
-        <div class="titre">SIDAAA</div>
+        <h2 class="title">Est-ce que cet personne a le sida ?</h2>
         <img class="fit-picture" src="source/goe.jpg" alt="">
 
         <div class="button-container">
