--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Intitulé de ma page</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="styles/index.css">
+    <script src="scripts/script.js"></script>
 
     <!-- Les trois lignes ci‑dessous sont un correctif pour que la sémantique
           HTML5 fonctionne correctement avec les anciennes versions de
