--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="main-container">
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
-        <img class="fit-picture" src="source/goe.jpg" alt="" onclick="eg()">
+        <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
         <div class="button-container">
             <input id="yesButton" class="button yes-button" type="button" value="OUI 😂">
