--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
         <div class="button-container">
-            <input id="yesButton" class="button yes-button" type="button" value="OUI 😂">
-            <input id="noButton" class="button no-button" type="button" value="NON 😐">
+            <input id="yesButton" class="button yes-button" type="button" value="OUI 😂" onclick="sida(true)">
+            <input id="noButton" class="button no-button" type="button" value="NON 😐" onclick="sida(false)">
         </div>
     </div>
 </body>
