--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
     <div class="main-container">
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
+        <h3>Score: <span id="score">0</span></h2>
+
         <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
         <div class="button-container">
