--- a/eg.html
+++ b/eg.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
 <html>
-    test
+
+    <head>
+        <meta charset="utf-8">
+    
+        <title>Intitulé de ma page</title>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Sonsie+One" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="styles/index.css">
+    </head>
+    
+    <header>
+        <div class="eg">
+            Bien joué vous avez trouvé l'oeuf de pâque ! 
+        </div>
+        <img class="tourne" src="source/sida.png" />
+    </header>
 </html>
