--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </header>
 
     <div class="main-container">
+
+      <div class="container">
+
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
         <h3>Score: <span id="score">0</span></h2>
 
@@ -37,6 +40,9 @@
             <input id="yesButton" class="button yes-button" type="button" value="OUI 😂" onclick="sida(true)">
             <input id="noButton" class="button no-button" type="button" value="NON 😐" onclick="sida(false)">
         </div>
+
+      </div>
+
     </div>
 </body>
 </html>
