--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       <div class="container">
 
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
-        <h3>Score: <span id="score">0</span></h2>
+
+        <div class=progress-bar-container>
+          <progress class="progress-bar" value="1" max="5">1</progress>
+        </div>
 
         <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
