--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
 
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
 
-        <div class=progress-bar-container>
-          <progress class="progress-bar" value="1" max="5">1</progress>
+        <div class="picture-progress-container-main">
+          <div class="picture-progress-container">
+            <div class=qsr>
+              <progress class="progress-bar" value="1" max="5">1</progress>
+            </div>
+            <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
+          </div>
         </div>
-
-        <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
         <div class="button-container">
             <input id="yesButton" class="button yes-button" type="button" value="OUI 😂" onclick="sida(true)">
