--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <div class="picture-progress-container-main">
           <div class="picture-progress-container">
-            <div class=qsr>
+            <div class=progress-bar-container>
               <progress class="progress-bar" value="1" max="5">1</progress>
             </div>
             <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
