--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
 
-        <div class="picture-progress-container-main">
-          <div class="picture-progress-container">
+        <div class="main-container">
+          <div class="container">
             <div class=progress-bar-container>
               <progress class="progress-bar" value="1" max="5">1</progress>
             </div>
