--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       <div class="container">
 
-        <h2 class="title">Est-ce que cet personne a le sida ?</h2>
+        <h2 class="title">Est-ce que cette personne a le sida ?</h2>
 
         <div class="main-container">
           <div class="container">
