--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <h2 class="title">Est-ce que cet personne a le sida ?</h2>
 
         <div class=progress-bar-container>
-          <progress class="progress-bar" value="1" max="5">1</progress>
+          <progress id="progress-bar" class="progress-bar" value="-1" max="5"></progress>
         </div>
 
         <img id="picture" class="fit-picture" src="source/image_1.jpg" alt="" onclick="eg()">
 
         <div class="button-container">
-            <input id="yesButton" class="button yes-button" type="button" value="OUI 😂" onclick="sida(true)">
-            <input id="noButton" class="button no-button" type="button" value="NON 😐" onclick="sida(false)">
+            <input id="yesButton" class="button yes-button" type="button" value="OUI 😂">
+            <input id="noButton" class="button no-button" type="button" value="NON 😐">
         </div>
 
       </div>
