--- a/eg.html
+++ b/eg.html
@@ -15,4 +15,11 @@
         </div>
         <img class="tourne" src="source/sida.png" />
     </header>
+    <body class="bodyeg">
+        <img class="tourne sizeEg" src="source/eg/estoult.jpg" />
+        <img class="tourne sizeEg" src="source/eg/goe.jpg" />
+        <img class="tourneA sizeEg" src="source/eg/ipad.jpg" />
+        <img class="tourne sizeEg" src="source/eg/nerleo.jpg" />
+        <img class="tourne sizeEg" src="source/eg/thobil.jpg" />
+    </body>
 </html>
