je vous emmerde

--- a/end.html
+++ b/end.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html onclick="sound()">
     <head>
         <meta charset="utf-8">
     
@@ -20,5 +20,5 @@
       </div>
     </body>
 </html>
-<script src="scripts/end.js"></script>
+<script src="scripts/end.js" ></script>
 
